--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,13 +20,14 @@ html{
     margin-bottom:10;
     padding-top:10px;
     padding-bottom: 10px;
+    border-left: 50px;
     display: inline;
     float: left;
     height: 70px;
     width:200px;
     font-size:25px;
     text-align: center;
-    background-color:#4aaaa5;
+    background-color:rgb(212, 87, 212);
     }
     
 
@@ -60,7 +61,7 @@ body {
     padding: -2px;
     margin-top: -16px;
     align-self: center;
-    background:url(../images/oriental.png) repeat;
+    background:url(../images/wild_flowers.png) repeat;
 
 }
 .container{
@@ -68,21 +69,21 @@ body {
     height: 500px;
     background:#ffffff;
     align-self:center;
-    margin-top: 40px;
-    margin-left:10px;
-    margin-right:10px;
-    
+    margin-top: 40px; 
     border-color: #dddddd;
 }
+
+
 h2{
-    color:#4aaaa5;
+    color:purple;
     font-size: 25px;
     border-bottom: 1px solid #777777;
     padding-bottom: 15px;
 }
 img{
-    float:left;
+
     padding:10px;
+    border-bottom: 20px;
 }
 
 
@@ -121,7 +122,7 @@ input[type=text], select, textarea {
     margin-bottom: 16px;
     resize: vertical;
 }
-  }
+
   input[type=submit] {
     background: #4aaaa5;
     font: 20px white;
@@ -133,23 +134,27 @@ input[type=text], select, textarea {
   input[type=submit]:hover {
     background-color: #888b88;
   }
-
-body::after {
-    content: '';
-    display: block;
-    height: 50px;
-}
-footer{
+  .spacer{
+      flex:1;
+  }
+  footer{
     position: absolute;
     bottom:0;
     width:100%;
     height:50px;
     background-color:#666666;
-    border-top:10px solid #4aaaa5;
+    border-top:10px solid purple;
     text-align: center;
     font-size:15px white;
     font-family: Arial, Helvetica, sans-serif;
+    display: block;
 }
+body::after {
+    content: '';
+    display: block;
+    height: 50px;
+}
+
 
   
   
